--- a/MpAgencjaKidoTv/src/main/res/layout/gridview_item.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/gridview_item.xml
@@ -15,7 +15,7 @@
 
     <ProgressBar
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/progres_bar_gridView_item_margin"
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
