--- a/MpAgencjaKidoTv/src/main/res/values/dimens.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="right_menu_buttons_margin">5dip</dimen>
     <dimen name="right_manu_margin">5dip</dimen>
     <dimen name="thumbial_image_padding">25dp</dimen>
+    <dimen name="gridView_width">400dp</dimen>
+    <dimen name="progres_bar_gridView_item_margin">25dp</dimen>
 </resources>
