--- a/MpAgencjaKidoTv/src/main/res/layout/mainmenu_scene.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/mainmenu_scene.xml
@@ -14,6 +14,7 @@
     <include layout="@layout/right_menu"/>
 
     <ImageView
+        android:id="@+id/tv_image"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,6 +23,7 @@
         android:contentDescription="@string/start_menu_bg_image"/>
 
     <RelativeLayout
+        android:id="@+id/menuLayout"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
