--- a/MpAgencjaKidoTv/src/main/res/layout/playlist_scene.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/playlist_scene.xml
@@ -11,6 +11,13 @@
         android:layout_width="100dp"
         android:layout_height="100dp"/>
 
+    <TextView
+        android:layout_centerInParent="true"
+        android:id="@+id/progresTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/progrestextview"/>
+
     <mp.agencja.apsik.kidotv.main.ViewPagerParallax
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
