--- a/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
@@ -3,7 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
-                android:id="@+id/mainLayout">
+                android:id="@+id/mainLayout"
+                android:keepScreenOn="true">
 
 
     <ImageButton
