--- a/MpAgencjaKidoTv/src/main/res/values-v11/styles.xml
+++ b/MpAgencjaKidoTv/src/main/res/values-v11/styles.xml
@@ -1,10 +1,8 @@
 <resources>
-
-    <style name="Theme" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="Theme" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <item name="android:windowBackground">@android:color/black</item>
     </style>
-
-    <style name="ThemeOverLayYoutube" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="ThemeOverLayYoutube" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
