--- a/MpAgencjaKidoTv/src/main/res/layout/favoriteplaylist_scene.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/favoriteplaylist_scene.xml
@@ -20,6 +20,7 @@
         android:contentDescription="@string/start_menu_bg_image"/>
 
     <ListView
+        android:choiceMode="singleChoice"
         android:cacheColorHint="#fff"
         android:divider="@color/custom"
         android:dividerHeight="1px"
