--- a/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
@@ -7,7 +7,6 @@
                 android:keepScreenOn="true"
                 android:animateLayoutChanges="true">
 
-
     <ImageButton
         android:layout_margin="5dp"
         android:background="@android:color/transparent"
@@ -20,7 +19,7 @@
     <include layout="@layout/right_menu_lock"/>
 
     <Button
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnPlay"
@@ -28,12 +27,32 @@
         android:background="@drawable/btn_play_icon"/>
 
     <Button
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnPause"
         android:layout_centerInParent="true"
         android:background="@drawable/btn_pause_icon"/>
+
+    <Button
+        android:layout_alignBaseline="@id/btnPause"
+        android:layout_toLeftOf="@+id/btnPause"
+        android:id="@+id/previous"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/left_arrow"
+        android:onClick="onPreviusClickListenr"/>
+
+    <Button
+        android:layout_alignBaseline="@id/btnPause"
+        android:layout_toRightOf="@+id/btnPause"
+        android:id="@+id/next"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/right_arrow"
+        android:onClick="onNextClickListenr"/>
 
     <SeekBar
         android:layout_alignParentBottom="true"
@@ -60,7 +79,7 @@
         android:text="@string/time"/>
 
     <ImageView
-        android:visibility="gone"
+        android:visibility="invisible"
         android:src="@drawable/cat"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
