--- a/MpAgencjaKidoTv/src/main/res/values/styles.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/styles.xml
@@ -1,11 +1,19 @@
 <resources>
-
-    <style name="Theme" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="Theme" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <item name="android:windowBackground">@android:color/black</item>
     </style>
-
-    <style name="ThemeOverLayYoutube" parent="android:Theme.NoTitleBar.Fullscreen">
+    <style name="ThemeOverLayYoutube" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
+    <style name="CustomDialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
 </resources>
