--- a/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/youtube_overlay.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:layout_alignBaseline="@id/btnPause"
-        android:layout_toLeftOf="@+id/btnPause"
+        android:layout_alignParentLeft="true"
         android:id="@+id/previous"
         android:visibility="invisible"
         android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
 
     <Button
         android:layout_alignBaseline="@id/btnPause"
-        android:layout_toRightOf="@+id/btnPause"
+        android:layout_alignParentRight="true"
         android:id="@+id/next"
         android:visibility="invisible"
         android:layout_width="wrap_content"
