--- a/MpAgencjaKidoTv/src/main/res/layout/mainmenu_scene.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/mainmenu_scene.xml
@@ -9,18 +9,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/start"
+        android:src="@drawable/niebo"
+        android:contentDescription="@string/start_menu_bg_image"/>
+
+    <ImageView
+        android:id="@+id/sun"
+        android:layout_marginTop="@dimen/balon_margin_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/slonce"
+        android:contentDescription="@string/start_menu_bg_image"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/reszta"
         android:contentDescription="@string/start_menu_bg_image"/>
 
     <include layout="@layout/right_menu"/>
-
-    <ImageView
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/balon_margin_top"
-        android:id="@+id/balon"
-        android:src="@drawable/balon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
     <ImageView
         android:id="@+id/tv_image"
@@ -39,7 +47,7 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            android:visibility="gone"
+            android:visibility="invisible"
             android:layout_centerHorizontal="true"
             android:id="@+id/btnStart"
             android:layout_marginTop="@dimen/start_button_margin_top"
@@ -51,7 +59,7 @@
             android:contentDescription="@string/image_start_button"/>
 
         <ImageButton
-            android:visibility="gone"
+            android:visibility="invisible"
             android:padding="@dimen/start_center_menu_buttons"
             android:layout_below="@+id/btnStart"
             android:id="@+id/btnGoogle"
@@ -62,7 +70,7 @@
             android:contentDescription="@string/google_button"/>
 
         <ImageButton
-            android:visibility="gone"
+            android:visibility="invisible"
             android:padding="@dimen/start_center_menu_buttons"
             android:layout_below="@+id/btnStart"
             android:layout_toRightOf="@+id/btnGoogle"
@@ -74,7 +82,7 @@
             android:contentDescription="@string/rate_button"/>
 
         <ImageButton
-            android:visibility="gone"
+            android:visibility="invisible"
             android:padding="@dimen/start_center_menu_buttons"
             android:layout_below="@+id/btnStart"
             android:layout_toRightOf="@+id/btnRate"
@@ -87,6 +95,23 @@
     </RelativeLayout>
 
     <ImageView
+        android:layout_alignRight="@+id/menuLayout"
+        android:paddingTop="@dimen/balon_margin_top"
+        android:layout_marginTop="@dimen/balon_margin_top"
+        android:id="@+id/balon_small"
+        android:src="@drawable/balon_small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:layout_marginTop="@dimen/balon_margin_top"
+        android:id="@+id/balon"
+        android:src="@drawable/balon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/balon_small"/>
+
+    <ImageView
         android:visibility="gone"
         android:id="@+id/adver"
         android:layout_width="match_parent"
@@ -94,4 +119,5 @@
         android:scaleType="centerCrop"
         android:src="@drawable/adver"
         android:contentDescription="@string/start_menu_bg_image"/>
+
 </RelativeLayout>
