--- a/MpAgencjaKidoTv/src/main/res/layout/playlist_scene.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/playlist_scene.xml
@@ -57,6 +57,14 @@
     <include layout="@layout/right_menu"/>
 
     <ImageView
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/yellow_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/yellow_arrow"/>
+
+    <ImageView
         android:visibility="invisible"
         android:id="@+id/image_buy_premium_full_scene"
         android:layout_centerInParent="true"
@@ -64,4 +72,5 @@
         android:layout_height="wrap_content"
         android:src="@drawable/buy_premium_full_scene"
         android:contentDescription="@string/start_menu_bg_image"/>
+
 </RelativeLayout>
