--- a/MpAgencjaKidoTv/src/main/res/layout/tip_dialog.xml
+++ b/MpAgencjaKidoTv/src/main/res/layout/tip_dialog.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"/>
 
     <RelativeLayout
+        android:id="@+id/checkBoxContainer"
         android:layout_alignParentBottom="true"
         android:background="@android:color/white"
         android:layout_width="wrap_content"
