--- a/MpAgencjaKidoTv/src/main/res/values/styles.xml
+++ b/MpAgencjaKidoTv/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <resources>
-    <style name="Theme" parent="android:Theme.Holo.NoActionBar.Fullscreen">
+    <style name="Theme" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen">
         <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
+
     <style name="ThemeOverLayYoutube" parent="android:Theme.Holo.NoActionBar.Fullscreen">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
